fixed overflow issue, new nfc expanding

--- a/Lyra/www/css/style.css
+++ b/Lyra/www/css/style.css
@@ -6,6 +6,7 @@
 	padding: 0px;
 	font-family: inherit;
 	overflow: hidden;
+	color: white;
 }
 body {
 	width: 100%;
@@ -27,7 +28,7 @@ p {
 h1,
 h2 {
 	font-family: 'Open Sans', sans-serif;
-	line-height: 150%;
+	line-height: 150%;ontain
 	color: #ffffff;
 	padding: 20px;
 }
@@ -50,8 +51,10 @@ h2 {
 	max-width: 100%;
 	overflow: hidden;
 	display: block;
+
 }
 #container-inner {
+	position: fixed;
 	width: 100%;
 	height: 100%;
 	overflow: hidden;
@@ -98,7 +101,6 @@ h2 {
 	text-align: center;
 	font-size: 12px;
 	line-height: 12px;
-	color: #888888;
 	cursor: pointer;
 	border-right: 1px solid #000000;
 	font-family: 'Open Sans', sans-serif;
@@ -112,7 +114,6 @@ h2 {
 .mobile-header ul li.active,
 .mobile-header ul li.active a {
 	color: #ffffff;
-	/*background: #317728;*/
 }
 .mobile-header ul li a:hover,
 .mobile-header ul li.active a {
@@ -195,6 +196,7 @@ h2 {
 .cursong, .prevsong, .shufflesong, .sugsong {
     width: 35%;
     height: 22%;
+    position: relative;
     -moz-border-radius: 100%;
     -webkit-border-radius: 100%;
     border-radius: 100%;
@@ -212,7 +214,7 @@ h2 {
 	position: absolute;
 	text-align: center;
 	left: 32%;
-	top: 45%;
+	top: 40%;
     border: 8px solid red;
     cursor: pointer;
     background-image: url(../img/monstercat.jpg);
@@ -223,7 +225,7 @@ h2 {
 .prevsong {
 	position: absolute;
 	left: -20%;
-	top: 45%;
+	top: 40%;
     border: 8px solid blue;
     background-image: url(../img/colors.jpg);
     background-position: center;
@@ -233,7 +235,7 @@ h2 {
 .shufflesong {
 	position: absolute;
 	left: 82%;
-	top: 72%;
+	top: 65%;
     border: 8px solid purple;
     background-image: url(../img/raider.jpg);
     background-position: center;
@@ -243,7 +245,7 @@ h2 {
 .sugsong {
 	position: absolute;
 	left: 82%;
-	top: 45%;
+	top: 40%;
     border: 8px solid green;
     background-image: url(../img/zedd.jpg);
     z-index: 9995;
@@ -259,7 +261,6 @@ h2 {
 	margin-right: auto;
 	left: 27%;
 	top: 17%;
-	overflow: hidden;
 	z-index: 5;
 }
 
@@ -277,27 +278,19 @@ h2 {
 
 #background{
 	background: #570313;
-	width: 100px;
-	height: 100px;
-	margin-top: 225px;
-	margin-left: 120px;
-	border-radius: 50%;
-	display: block;
-	z-index: 0;
-	position: absolute;
+	border-radius: 100%;
+	width: 500px;
+	height: 500px;
+	z-index: 99999999;
+	position: relative;
 	-webkit-transition-duration: 1s;
     -webkit-transition-property: all;
     -webkit-transition-timing-function: ease-out;
     -webkit-transform: translate3d(0,0,0);
-    overflow: hidden;
+    -webkit-transform: scale(0.1,0.1);
 }
 
 #background.open {
-	position: fixed;
-	margin-top: 60%;
-	margin-left: 55%;
-	width: 800px;
-	height: 800px;
-	overflow: hidden;
+	-webkit-transform: scale(1,1);
 }
 
